# di-rust

./: Cargo.toml  README.md
docs/: index.md
docs/product/: configuration-reference.md  overview.md
docs/product/features/: async-support.md  auto-registration.md  bindings.md  modules.md  scopes.md
docs/technical/: architecture.md  context-api.md  macro-system.md  type-system.md
docs/user/: getting-started.md
examples/axum-example/src/: main.rs
from-attr/: Cargo.toml
from-attr-core/: Cargo.toml
from-attr-macro/: Cargo.toml
rudi-core/: Cargo.toml
rudi/src/: context.rs  error.rs  lib.rs  provider.rs  registry.rs
rudi/tests/: context_allow_override.rs  context_call_sync_in_async.rs  context_dynamic_modules.rs  context_standalone_variables.rs  feat_eager_create_instance.rs  feat_multiple_module.rs  provider_override.rs
