[package]
name = "from-attr-macro"
description = "Macros for from-attr"
keywords = ["attributes", "derive", "macro"]
version = "0.9.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
from-attr-core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
quote-use = { workspace = true }
syn = { workspace = true, features = ["proc-macro", "derive"] }
