[package]
name = "from-attr"
description = "A crate that makes it easy to parse attributes."
keywords = ["attributes", "derive", "macro"]
version = "0.9.0"
edition.workspace = true
license.workspace = true

[dependencies]
from-attr-core = { workspace = true }
from-attr-macro = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["derive", "printing"] }

[dev-dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[features]
syn-full = ["syn/full"]
